# shapy

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  requirements-old.txt  requirements.txt
app/: api.py  gunicorn_conf.py  main.py  router.py  utils.py
app/conf/: config.py
attributes/: demo.py
data/: download_data.sh  download_data_smpl.sh  download_data_smpl_x.sh
measurements/: virtual_measurements.py
mesh-mesh-intersection/: optional-requirements.txt  requirements.txt
regressor/: demo.py  evaluate.py
samples/openpose/: img_00.json
scripts/: build.sh  start.sh
